# skadipy

./: .gitignore  CITATION.cff  README.md  compose-dev.yaml  devcontainer.dockerfile  pyproject.toml  requirements.examples.txt  requirements.txt
.devcontainer/: devcontainer.dockerfile  devcontainer.json
examples/: cybership_jonny.ipynb  milliampere1.ipynb  milliampere1_qp.ipynb  milliampere1_rf.ipynb
notebooks/: 001_pseudo_inverse.ipynb  002_minimum_magnitude_filter.ipynb  003_minimum_magnitude_and_azimuth_filter.ipynb  004_pseudo_inverse.ipynb  005_quadratic_programming.ipynb  006_minimum_magnitude.ipynb  007_minimum_magnitude_and_azimuth_filter.ipynb  008_minimum_magnitude_compare_cbf.ipynb  011_compare_lambda_with_shell_plot.ipynb  012_compare_allocators_azimuth_rate.ipynb  013_compare_allocators_azimuth_rate.ipynb  014_compare_cbf_time_constant.ipynb  014_compare_lambda_with_shell_plot.ipynb  015_compare_allocators_azimuth_rate.ipynb  015_compare_lambda_with_shell_plot.ipynb  016_compare_allocators_azimuth_rate.ipynb  016_compare_rho_with_shell_plot.ipynb  017_compare_rho_with_shell_plot.ipynb  018_compare_cbf_time_constant.ipynb  019_compare_cbf_time_constant.ipynb  01_pseudo_inverse.ipynb  020_compare_cbf_time_constant.ipynb  02_minimum_magnitude_filter.ipynb  03_minimum_magnitude_and_azimuth_filter.ipynb  04_pseudo_inverse.ipynb  05_minimum_magnitude.ipynb  06_minimum_magnitude_and_azimuth_filter.ipynb  07_minimum_magnitude_compare_cbf.ipynb  09_compare_allocators_azimuth_rate.ipynb  100_plotting.ipynb  100_plotting_alternative_values.ipynb  100_plotting_cost_function.ipynb  101_plotting.ipynb  102_plotting.ipynb  104_plotting.ipynb  10_compare_allocators_azimuth_rate copy.ipynb  11_compare_rho_with_shell_plot.ipynb  12_compare_lambda_with_shell_plot.ipynb  13_compare_allocators_azimuth_rate.ipynb  14_compare_lambda_with_shell_plot.ipynb  (+5 more)
(+35 files in other folders)
